Fin algorithme recherche connections